Tryinh to make corrections

--- a/first_project.html
+++ b/first_project.html
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col-lg-12 d-flex justify-content-center m-2">
 
-                <h1 class="display-1 lh-1 mb-3 text-center">Simple and beautiful ready for use blocks</h1>
+                <h1 class="display-1 lh-1 mb-3 text-center">Simple and beautiiful ready for use blocks</h1>
 
             </div>
         </div>
